# asus-x13-gpu-manager

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  install.sh  unistall.sh
share/dbus-1/system.d/: manjaro.conf  org.skynet.asus.conf
share/interfaces/: interface.xml  systemd.xml
share/systemd/: asus-gpu-man.service  asus-gpu-manager.service  asus-gpu-switch.service
src/client/: CMakeLists.txt  asus-ctrl-client-glue.h  asus-ctrl.h  asus-manager-proxy-glue.h  asus-manager-proxy.h  conanfile.txt  main.cpp
src/gpuboot/: CMakeLists.txt  main.cpp
src/gpuswitch/: CMakeLists.txt  main.cpp
src/kmod/: .Module.symvers.cmd  .hello_mod.ko.cmd  .hello_mod.mod.cmd  .hello_mod.mod.o.cmd  .hello_mod.o.cmd  .hello_mod.prelink.o.cmd  .modules.order.cmd  Makefile  hello_mod.c  hello_mod.ko  hello_mod.mod  hello_mod.mod.c  modules.order
src/lib/: CMakeLists.txt  conanfile.txt  config.h  defs.cpp  defs.h  enums.h  fsutils.cpp  fsutils.h  kmod.cpp  kmod.h  logutils.cpp  logutils.h  module_file.cpp  module_file.h  pci.cpp  pci.h  storage.h  strutils.cpp  strutils.h  system.cpp  system.h  systemd-manager-proxy-glue.h  systemd-manager-proxy.cpp  systemd-manager-proxy.h  toggle.cpp  toggle.h  utils.h
src/lib/config/: config.h  config.h.in
src/lib/include/asus-gpu-lib/: api.h
src/lib/include/egpu_x13/: api.h
src/lib/utils/: CMakeLists.txt  CTestTestfile.cmake  main.cpp
src/server/: CMakeLists.txt  asus-manager-adapter-glue.h  asus-manager-adapter.h  main.cpp  systemd-client-glue.h  systemd-manager-proxy-glue.h  systemd-manager-proxy.h
src/service/: CMakeLists.txt  asus-manager-adapter-glue.h  asus-manager-adapter.cpp  asus-manager-adapter.h  conanfile.txt  main.cpp  systemd-manager-proxy-glue.h  systemd-manager-proxy.cpp  systemd-manager-proxy.h
